--- a/native/android/app/src/main/res/layout/fragment_group_friend.xml
+++ b/native/android/app/src/main/res/layout/fragment_group_friend.xml
@@ -40,10 +40,10 @@
       android:id="@+id/userNameText"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="UserName"
+      android:layout_marginStart="24dp"
+      android:text="ユーザーネーム"
       android:textSize="24sp"
       app:layout_constraintBottom_toBottomOf="@+id/thumbnail"
-      app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toEndOf="@+id/thumbnail"
       app:layout_constraintTop_toTopOf="@+id/thumbnail" />
 
