--- a/native/android/app/src/main/res/layout/list_item_grid.xml
+++ b/native/android/app/src/main/res/layout/list_item_grid.xml
@@ -38,8 +38,8 @@
       app:layout_constraintEnd_toEndOf="@+id/thumbnail"
       app:layout_constraintStart_toStartOf="@+id/thumbnail"
       app:layout_constraintTop_toBottomOf="@+id/thumbnail"
-      app:username="@{userProperty}"
-      tools:text="userName" />
+      app:name="@{userProperty}"
+      tools:text="name" />
 
   </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
