--- a/native/android/app/src/main/res/layout/fragment_add_payment_step1.xml
+++ b/native/android/app/src/main/res/layout/fragment_add_payment_step1.xml
@@ -5,7 +5,9 @@
 
   <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:focusable="true"
+    android:focusableInTouchMode="true">
 
     <TextView
       android:id="@+id/step"
