--- a/native/android/app/src/main/res/layout/fragment_new_account.xml
+++ b/native/android/app/src/main/res/layout/fragment_new_account.xml
@@ -38,27 +38,31 @@
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginStart="16dp"
-      android:layout_marginTop="16dp"
       android:layout_marginEnd="16dp"
       android:backgroundTint="@color/ourTheme"
       android:text="@string/create_new_account"
       android:textColor="@android:color/white"
       android:textSize="18sp"
+      app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="1.0"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/passwordConfirmInformation" />
+      app:layout_constraintTop_toBottomOf="@+id/passwordConfirmInformation"
+      app:layout_constraintVertical_bias="0.4" />
 
     <EditText
       android:id="@+id/passConfirmEditText"
-      android:layout_width="384dp"
-      android:layout_height="46dp"
+      android:layout_width="0dp"
+      android:layout_height="0dp"
       android:layout_marginTop="8dp"
       android:autofillHints=""
       android:ems="10"
       android:hint="@string/password_confirm"
       android:inputType="textPassword"
       android:maxLength="15"
+      app:layout_constraintBottom_toTopOf="@+id/passwordConfirmInformation"
+      app:layout_constraintDimensionRatio="8:1"
+      app:layout_constraintEnd_toEndOf="@+id/passEditText"
       app:layout_constraintStart_toStartOf="@+id/passwordInformation"
       app:layout_constraintTop_toBottomOf="@+id/passwordInformation" />
 
@@ -66,7 +70,7 @@
       android:id="@+id/hasAccountText"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginTop="16dp"
+      android:layout_marginTop="8dp"
       android:text="@string/already_has_an_account"
       android:textSize="18sp"
       app:layout_constraintEnd_toEndOf="parent"
@@ -77,7 +81,7 @@
       android:id="@+id/editPhotoText"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginTop="16dp"
+      android:layout_marginTop="8dp"
       android:text="@string/upload_photo"
       android:textSize="12sp"
       app:layout_constraintEnd_toEndOf="parent"
@@ -88,70 +92,85 @@
       android:id="@+id/thumbnailEdit"
       android:layout_width="94dp"
       android:layout_height="81dp"
-      android:layout_marginTop="100dp"
       android:background="@drawable/back"
       android:contentDescription="@string/camera_icon"
       android:padding="0dp"
       android:src="@android:drawable/ic_menu_camera"
       android:visibility="visible"
+      app:layout_constraintBottom_toTopOf="@+id/fullNameEditText"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent" />
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.40" />
 
 
     <EditText
       android:id="@+id/fullNameEditText"
       android:layout_width="0dp"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="16dp"
+      android:layout_height="0dp"
       android:autofillHints=""
       android:ems="10"
       android:hint="@string/name"
       android:inputType="textPersonName"
       android:maxLength="32"
+      app:layout_constraintBottom_toTopOf="@+id/userNameEditText"
+      app:layout_constraintDimensionRatio="8:1"
       app:layout_constraintEnd_toEndOf="@+id/userNameEditText"
-      app:layout_constraintHorizontal_bias="1.0"
+      app:layout_constraintHorizontal_bias="0.5"
       app:layout_constraintStart_toStartOf="@+id/userNameEditText"
-      app:layout_constraintTop_toBottomOf="@+id/editPhotoText" />
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_chainStyle="packed" />
 
     <EditText
       android:id="@+id/userNameEditText"
       android:layout_width="0dp"
-      android:layout_height="wrap_content"
+      android:layout_height="0dp"
       android:layout_marginTop="8dp"
       android:autofillHints=""
       android:ems="10"
       android:hint="@string/username"
       android:inputType="textPersonName"
       android:maxLength="32"
+      app:layout_constraintBottom_toTopOf="@+id/emailEditText"
+      app:layout_constraintDimensionRatio="8:1"
       app:layout_constraintEnd_toEndOf="@+id/emailEditText"
-      app:layout_constraintHorizontal_bias="1.0"
+      app:layout_constraintHorizontal_bias="0.5"
       app:layout_constraintStart_toStartOf="@+id/emailEditText"
       app:layout_constraintTop_toBottomOf="@+id/fullNameEditText" />
 
     <EditText
       android:id="@+id/emailEditText"
       android:layout_width="0dp"
-      android:layout_height="wrap_content"
+      android:layout_height="0dp"
+      android:layout_marginTop="8dp"
       android:autofillHints=""
       android:ems="10"
       android:hint="@string/email"
       android:inputType="textEmailAddress"
       android:maxLength="256"
+      app:layout_constraintBottom_toTopOf="@+id/passEditText"
+      app:layout_constraintDimensionRatio="8:1"
       app:layout_constraintEnd_toEndOf="@+id/passEditText"
+      app:layout_constraintHorizontal_bias="0.5"
       app:layout_constraintStart_toStartOf="@+id/passEditText"
       app:layout_constraintTop_toBottomOf="@+id/userNameEditText" />
 
     <EditText
       android:id="@+id/passEditText"
-      android:layout_width="383dp"
-      android:layout_height="50dp"
+      android:layout_width="0dp"
+      android:layout_height="0dp"
+      android:layout_marginStart="16dp"
+      android:layout_marginTop="8dp"
+      android:layout_marginEnd="16dp"
       android:autofillHints=""
       android:ems="10"
       android:hint="@string/password"
       android:inputType="textPassword"
       android:maxLength="32"
+      app:layout_constraintBottom_toTopOf="@+id/passwordInformation"
+      app:layout_constraintDimensionRatio="8:1"
       app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.5"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/emailEditText" />
 
@@ -161,6 +180,7 @@
       android:layout_height="wrap_content"
       android:layout_marginTop="8dp"
       android:text="@string/passwordInformation"
+      app:layout_constraintBottom_toTopOf="@+id/passConfirmEditText"
       app:layout_constraintStart_toStartOf="@+id/passEditText"
       app:layout_constraintTop_toBottomOf="@+id/passEditText" />
 
@@ -170,6 +190,7 @@
       android:layout_height="wrap_content"
       android:layout_marginTop="8dp"
       android:text="@string/passwordConfirmInformation"
+      app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintStart_toStartOf="@+id/passConfirmEditText"
       app:layout_constraintTop_toBottomOf="@+id/passConfirmEditText" />
 
