nativeAdのバグ修正

--- a/native/android/app/src/main/res/layout/list_group_item_plane.xml
+++ b/native/android/app/src/main/res/layout/list_group_item_plane.xml
@@ -29,6 +29,7 @@
       app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
+      android:id="@+id/normalLayout"
       android:layout_width="0dp"
       android:layout_height="0dp"
       android:layout_marginStart="8dp"
