--- a/native/android/app/src/main/res/layout/fragment_mail_check.xml
+++ b/native/android/app/src/main/res/layout/fragment_mail_check.xml
@@ -8,31 +8,17 @@
     android:layout_height="match_parent"
     android:background="@color/ourTheme">
 
-    <TextView
-      android:id="@+id/prestoPayText"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="@string/presto_pay"
-      android:textColor="#ffffff"
-      android:textSize="36sp"
-      android:textStyle="bold"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.25" />
-
     <androidx.constraintlayout.widget.ConstraintLayout
       android:id="@+id/parentConstraintLayout"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginStart="24dp"
-      android:layout_marginTop="32dp"
       android:layout_marginEnd="24dp"
       android:background="@android:color/background_light"
+      app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/prestoPayText">
+      app:layout_constraintTop_toTopOf="parent">
 
       <ImageView
         android:id="@+id/mailIcon"
@@ -84,6 +70,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="16dp"
         android:background="@color/ourTheme"
