--- a/native/android/app/src/main/res/layout/fragment_add_payment_step4.xml
+++ b/native/android/app/src/main/res/layout/fragment_add_payment_step4.xml
@@ -116,11 +116,13 @@
             app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
           android:id="@+id/camera2"
           android:layout_width="0dp"
           android:layout_height="0dp"
           android:layout_marginStart="8dp"
+          android:background="@drawable/circle_theme_color"
+          android:backgroundTint="#4B000000"
           android:contentDescription="@string/camera_icon"
           android:src="@android:drawable/ic_menu_camera"
           app:layout_constraintBottom_toBottomOf="@+id/comment2"
