--- a/native/android/app/src/main/res/layout/fragment_group_edit.xml
+++ b/native/android/app/src/main/res/layout/fragment_group_edit.xml
@@ -7,6 +7,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <de.hdodenhof.circleimageview.CircleImageView
+      android:id="@+id/groupThumnail"
+      android:layout_width="85dp"
+      android:layout_height="85dp"
+      android:layout_marginTop="8dp"
+      android:background="@drawable/circle_theme_color"
+      android:backgroundTint="#4B000000"
+      android:contentDescription="@string/profile_photo"
+      android:src="@android:drawable/ic_menu_camera"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/textView12" />
+
     <ProgressBar
       android:id="@+id/progressBarGroupEdit"
       style="?android:attr/progressBarStyle"
@@ -76,18 +89,6 @@
         app:srcCompat="@drawable/ic_baseline_chevron_right_24" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <de.hdodenhof.circleimageview.CircleImageView
-      android:id="@+id/groupThumnail"
-      android:layout_width="90dp"
-      android:layout_height="90dp"
-      android:layout_marginTop="24dp"
-      android:background="@drawable/circle_theme_color"
-      android:contentDescription="@string/icon"
-      android:src="@drawable/ic_launcher_foreground"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
     <EditText
       android:id="@+id/groupEditName"
