fix: 精算ボタンの幅を変更

--- a/native/android/app/src/main/res/layout/fragment_group_detail.xml
+++ b/native/android/app/src/main/res/layout/fragment_group_detail.xml
@@ -66,13 +66,14 @@
 
         <TextView
           android:id="@+id/settleUp"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
+          android:layout_width="140dp"
+          android:layout_height="0dp"
           android:layout_marginTop="8dp"
-          android:background="#F44336"
+          android:background="#FF5252"
           android:paddingStart="8dp"
           android:paddingEnd="8dp"
           android:text="@string/settleup_group"
+          android:textAlignment="center"
           android:textColor="@color/design_default_color_on_primary"
           android:textSize="18sp"
           app:layout_constraintEnd_toEndOf="parent"
