--- a/native/android/app/src/main/res/layout/fragment_group_detail.xml
+++ b/native/android/app/src/main/res/layout/fragment_group_detail.xml
@@ -66,12 +66,12 @@
 
         <TextView
           android:id="@+id/settleUp"
-          android:layout_width="140dp"
+          android:layout_width="wrap_content"
           android:layout_height="0dp"
           android:layout_marginTop="8dp"
           android:background="#FF5252"
-          android:paddingStart="8dp"
-          android:paddingEnd="8dp"
+          android:paddingStart="16dp"
+          android:paddingEnd="16dp"
           android:text="@string/settleup_group"
           android:textAlignment="center"
           android:textColor="@color/design_default_color_on_primary"
